[package]
name = "approx_collections"
description = "Collections using approximate floating-point comparison"
version = "4.0.0"
authors = ["Andrew Farkas"]
edition = "2024"
repository = "https://github.com/HactarCE/approx_collections/"
rust-version = "1.88.0"
keywords = ["math", "equality", "approximate", "float", "comparison"]
categories = ["data-structures", "mathematics"]
license = "MIT OR Apache-2.0"
autotests = true

[workspace]
members = ["derive"]

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = "warn"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }

assigning_clones = "allow"
comparison_chain = "allow"
doc_markdown = "warn"
if_then_some_else_none = "warn"
type_complexity = "allow"
manual_let_else = "warn"
match_like_matches_macro = "allow"
semicolon_if_nothing_returned = "warn"
semicolon_inside_block = "warn"
stable_sort_primitive = "warn"
too_many_arguments = "allow"
undocumented_unsafe_blocks = "warn"
uninlined_format_args = "warn"
unwrap_used = "warn"

[dependencies]
approx_collections_derive = { version = "1.1.0", path = "derive", optional = true }
rustc-hash = { version = "2.1.1", optional = true }
smallvec = { version = "1.13.2", features = ["union"] }

[dev-dependencies]
proptest = "1.7.0"
proptest-macro = "0.2.0"

[features]
default = ["rustc-hash", "derive"]
derive = ["dep:approx_collections_derive"]
